--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "ppp-gustavolima",
+  "name": "assistente-triagem-medica",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^4.6.3",
+    "uuid": "^9.0.1"
+  }
 }
